<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyRestaurantQueuingSystem</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">用户名:</string>
    <string name="login">登	录</string>
    <string name="name">餐厅排号系统</string>
    <string name="password">密	码:</string>
    <string name="phone">电	话:</string>
    <string name="email">邮	箱:</string>
    <string name="sex">性	别:</string>
    <string name="man">男</string>
    <string name="woman">女</string>

</resources>
